[tool.poetry]
name = "hbn-preprocess"
version = "0.1.0"
description = "A repo for cleaning and pivoting the hbh clinician consensus data for analysis."
authors = ["maya-roberts <maya36247@gmail.com>"]
license = ""
readme = "README.md"
packages = [{ include = "hbn-preprocess", from = "src" }]

[tool.poetry.dependencies]
# Consider changing to >=3.11 python version
python = ">3.11"
matplotlib = "^3.10.0"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.15.0"
pre-commit = "^4.0.1"
pytest-cov = "^6.0.0"
ruff = "^0.9.9"
ipykernel = "^6.29.5"

[tool.poetry.group.docs.dependencies]
pdoc = "^15.0.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
